--- a/src/app/pages/forms/experience-form/experience-form.component.html
+++ b/src/app/pages/forms/experience-form/experience-form.component.html
@@ -43,11 +43,24 @@
             <!-- <input type="text" placeholder="Add skill" (keydown.enter)="addSkill($event)"> -->
             <div class="input-group flex flex-col items-start gap-1 w-full">
                 <span class="text-main-txt-color Raleway-Regular text-sm xl:text-base">Add Skill</span>
-                <input #skillInput
+
+                <div class="flex w-full items-center gap-4">
+                    <input #skillInput
                     class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
                     placeholder="eg. Typescript" type="text">
 
-                    <button (click)="addSkill(skillInput.value, $event)">add skill</button>
+                    <!-- <button (click)="addSkill(skillInput.value, $event)">add skill</button> -->
+                    <!-- <button (click)="addSkill(skillInput.value, $event)" class="flex flex-shrink-0 py-3 px-6 Raleway-Medium bg-blue text-white rounded-md">Add Skill</button> -->
+                </div>
+
+
+                <div class="flex w-full items-center gap-1 mt-6">
+                    <img class="opacity-50" src="/assets/icons/info-circle.svg" alt="">
+                    <span class="opacity-50 Raleway-Medium text-main-txt-color">Press Enter to Add Skill</span>
+                </div>
+              
+                
+
             </div>
         </div>
 
@@ -213,16 +226,15 @@
     
             </div> -->
 
-        <div
-            class="dialog-container border border-border-color w-3/4 xl:w-2/4 h-2/4 bg-white rounded-xl relative z-[9999] flex flex-col overflow-hidden">
+        <div class="dialog-container border border-border-color w-3/4 xl:w-2/4 h-2/4 3xl:w-[35%] bg-white rounded-xl relative z-[9999] flex flex-col overflow-hidden">
             <div class="header w-full flex items-center justify-between border-b py-2 px-5 border-border-color">
                 <div class="flex items-start gap-9">
                     <span class="SF-Medium text-lg text-main-txt-color">Generate</span>
-                    <span class="flex items-baseline gap-2"><span class="SF-Medium text-sm opacity-50 text-main-txt-color">Powered by</span> <img class="w-[3.25rem]" src="/assets/icons/gemini.svg" alt=""/></span>
+                    <span class="flex items-baseline gap-2"><span class="Raleway-Medium text-sm opacity-50 text-main-txt-color">Powered by</span> <img class="w-[3.25rem]" src="/assets/icons/gemini.svg" alt=""/></span>
                 </div>
 
                 <img (click)="openAIDialog()" class="cursor-pointer" src="/assets/icons/close.svg" alt="">
-            </div>
+        </div>
 
             <!-- <div class="content w-full p-5 h-[-webkit-fill-available] flex flex-row gap-5 overflow-hidden">
 
@@ -251,12 +263,12 @@
             </div> -->
 
             <div class="flex flex-col h-[-webkit-fill-available] bg-gray-100">
-                <div class="flex-grow flex flex-col p-4 overflow-y-auto h-[20rem]" id="chatHistory">
+                <div class="flex-grow flex flex-col p-4 overflow-y-auto h-[15rem]" id="chatHistory">
                     @for (message of messages; track $index) {
                     <div [ngClass]="{
                         'self-end bg-blue text-white': message.sender === 'user',
                         'self-start bg-gray-200 animate': message.sender === 'bot' && message.animate
-                      }" class="chat-box Inter-Medium py-2.5 px-5 my-2 rounded-3xl max-w-xs">{{message.content}}</div>
+                      }" class="chat-box Raleway-Medium py-2.5 px-5 my-2 rounded-3xl max-w-xs">{{message.content}}</div>
                     }
                     @if (isGeneratedContentLoading) {
                         <div class="self-start bg-gray-200 py-2.5 px-5 my-2 h-10 w-40 flex flex-shrink-0 rounded-3xl max-w-xs animate-pulse">
@@ -271,7 +283,7 @@
                   <input [ngModelOptions]="{standalone: true}" [(ngModel)]="textareaValue" (keydown.enter)="sendMessage()" 
                          type="text" [placeholder]="placeholder" (focus)="onFocus($event)" (keydown)="onKeyDown($event)"
                          class="flex-grow p-2 border Inter-Regular border-gray-300 rounded-md focus:outline-none" />
-                  <button (click)="sendMessage()" class="ml-2 py-2 px-5 Inter-SemiBold bg-blue text-white rounded-md">Send</button>
+                  <button (click)="sendMessage()" class="ml-2 py-2 px-5 Raleway-Medium bg-blue text-white rounded-md">Send</button>
                 </div>
               </div>
               
