--- a/src/app/pages/forms/experience-form/experience-form.component.html
+++ b/src/app/pages/forms/experience-form/experience-form.component.html
@@ -47,7 +47,7 @@
                 <div class="flex w-full items-center gap-4">
                     <input #skillInput
                     class="focus:outline-none rounded-lg border border-[#D0D5DD] bg-white py-3 px-4 2xl:py-4 2xl:px-5 w-full placeholder:text-[#667085] Inter-Regular "
-                    placeholder="eg. Typescript" type="text">
+                    placeholder="eg. Typescript" (keydown.enter)="addSkill(skillInput.value, $event)" type="text">
 
                     <!-- <button (click)="addSkill(skillInput.value, $event)">add skill</button> -->
                     <!-- <button (click)="addSkill(skillInput.value, $event)" class="flex flex-shrink-0 py-3 px-6 Raleway-Medium bg-blue text-white rounded-md">Add Skill</button> -->
@@ -209,11 +209,11 @@
 
     <div class="button-group flex items-center gap-4 w-full pb-12">
         <div class="flex items-center gap-4 w-full">
-            <button (click)="onPreviousClick(0)"
+            <button type="button" (click)="onPreviousClick(0)"
                 class="reset-password-btn rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
                 href="">Previous</button>
 
-            <button type="submit" (click)="onContinueClick(2)"
+            <button type="button" (click)="onContinueClick(2)"
                 class="logout-btn rounded-lg bg-[#EDF6FF] border flex-grow border-[#EDF6FF] text-blue py-3 px-6 SF-Medium"
                 href="">Save & Continue</button>
         </div>
@@ -222,9 +222,9 @@
 
     @if (isAIDialogOpen) {
     <div class="ai-dialog w-full h-full absolute top-0 left-0 flex items-center justify-center">
-        <!-- <div class="layer absolute top-0 left-0 w-full h-full bg-[#00000050] z-40">
+        <div class="layer absolute top-0 left-0 w-full h-full bg-[#00000050] z-40">
     
-            </div> -->
+            </div>
 
         <div class="dialog-container border border-border-color w-3/4 xl:w-2/4 h-2/4 3xl:w-[35%] bg-white rounded-xl relative z-[9999] flex flex-col overflow-hidden">
             <div class="header w-full flex items-center justify-between border-b py-2 px-5 border-border-color">
