--- a/src/app/pages/forms/personal-info-form/personal-info-form.component.html
+++ b/src/app/pages/forms/personal-info-form/personal-info-form.component.html
@@ -157,7 +157,7 @@
                 </div>
 
                 <!-- Add Website link -->
-                <div class="github flex flex-col items-start gap-2 w-full">
+                <div class="website flex flex-col items-start gap-2 w-full">
                     <div class="top w-full flex flex-row items-start justify-between gap-2">
                         <div class="header flex flex-col items-start gap-1">
                             <div class="flex flex-row items-center gap-2">
