finally resolved dymanic component loading issues

--- a/src/app/components/preview-templates/template-two-preview/template-two-preview.component.html
+++ b/src/app/components/preview-templates/template-two-preview/template-two-preview.component.html
@@ -1,141 +1,124 @@
+
+
+
 <section class="main-container w-full h-full p-6 flex flex-col gap-8">
-    <div class="header flex flex-col items-start justify-between gap-2">
+    <div class="header flex items-end justify-between">
         <div class="left flex flex-col items-start">
-            <span [style.color]="mainTextColor" class="Poppins-SemiBold text-xl">Daniel Glover</span>
-            <span class="Poppins-SemiBold subtxt text-sm text-[#6F7588]">Frontend Developer</span>
+            <span [style.color]="mainTextColor" class="SG-Bold text-xl">Daniel Glover</span>
+            <span class="SG-Regular subtxt text-sm">Frontend Developer</span>
         </div>
 
-        <div class="right flex flex-row gap-2 items-center">
-            <span class="Poppins-Regular text-[#9FA3AE] subtxt text-[10px]">055 830 8631</span>
-            <div class="dot w-1 h-1 bg-[#9FA3AE] rounded-full"></div>
-            <span class="Poppins-Regular text-[#9FA3AE] subtxt text-[10px]">iamglover0&commat;gmail.com</span>
-            <div class="dot w-1 h-1 bg-[#9FA3AE] rounded-full"></div>
-            <a href="#" class="Poppins-Regular text-[#9FA3AE] underline subtxt text-[10px]">www.danielglover.com</a>
-
+        <div class="right flex flex-col items-end">
+            <a href="#" class="SG-Medium underline subtxt text-xs">danielglover.design</a>
+            <a href="#" class="SG-Medium underline subtxt text-xs">iamglover0&commat;gmail.com</a>
+            <span class="SG-Medium subtxt text-xs">055 830 8631</span>
         </div>
     </div>
 
 
-    <div class="main-body flex flex-row gap-6">
+    <div class="main-body flex flex-col gap-6">
 
-        <div class="left-skills w-[30%] flex-col">
+        <div class="experience-section flex items-start justify-between">
+            <div class="left w-[30%]">
+                <span [style.color]="mainTextColor" class="SG-Bold text-sm">Experience</span>
+            </div>
 
-            <div class="main-skills-group flex flex-col gap-6">
-                <span [style.color]="mainTextColor" class="Poppins-Bold text-sm uppercase">Skills & Tools</span>
-
-
-                <div class="flex flex-col gap-4">
-                    <div class="skills-section flex flex-col items-start gap-4 justify-between">
-
-                        <div class="single-skill flex flex-col items-start gap-1 justify-between">
-                            <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Skills</span>
-
-                            <div class="group flex flex-col items-start gap-1">
-                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Rapid
-                                    Prototyping</span>
-                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">User
-                                    Research</span>
-                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Interaction
-                                    Design</span>
-                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Visual
-                                    Design</span>
-                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">User
-                                    Testing</span>
-                            </div>
-                        </div>
-
-                        <div class="single-skill flex flex-col items-start gap-1 justify-between">
-                            <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Tools</span>
-
-                            <div class="group flex flex-col items-start gap-1">
-                                <span
-                                    class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Sketch</span>
-                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Figma</span>
-                                <span
-                                    class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">FigJam</span>
-                                <span
-                                    class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">InVision</span>
-                                <span
-                                    class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Webflow</span>
-                            </div>
-                        </div>
-
+            <div class="right w-[70%] flex flex-col gap-4">
+                <div class="top-right flex items-start justify-between">
+                    <div class="header flex flex-col items-start flex-shrink-0">
+                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">ABC Company</span>
+                        <span class="SG-Regular flex-shrink-0 text-xs">Frontend Developer</span>
                     </div>
+
+                    <span class="SG-Regular flex-shrink-0 text-xs">Jan 2023 - Present</span>
+
+                </div>
+
+                <div class="bottom-right list-none relative flex flex-col items-start gap-1">
+                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Conducted user research and analyzed data to identify design opportunities and inform design decisions</li>
+                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Collaborated with cross-functional teams to create wireframes, prototypes, and high-fidelity mockups</li>
+                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Facilitated design reviews and user testing sessions to gather feedback and improve design solutions</li>
                 </div>
             </div>
 
         </div>
 
-        <div class="right-experiences w-[70%] flex gap-6 flex-col">
 
-            <div class="main-experience-group flex flex-col gap-4">
-                <span [style.color]="mainTextColor" class="Poppins-Bold text-sm uppercase">Experiences</span>
-
-
-                <div class="flex flex-col gap-4">
-                    <div class="experience-section flex flex-col items-start gap-4 justify-between">
-
-                        <div class="single-xp flex flex-col items-start gap-1 justify-between">
-                            <div class="header flex flex-row-reverse items-center gap-2 flex-shrink-0">
-                                <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Disney+
-                                    Hotstar</span>
-                                <span [style.backgroundColor]="mainTextColor"
-                                    class="line w-[1px] h-3 bg-[#6F7588]"></span>
-                                <span [style.color]="mainTextColor" class="Poppins-Medium flex-shrink-0 text-xs">Product
-                                    Designer</span>
-                            </div>
-
-                            <span class="Poppins-Regular text-[#9FA3AE] flex-shrink-0 text-xs">Sept 2021 -
-                                Present</span>
-
-                            <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Currently
-                                working on a new Disney+Hotstar product line for a global audience. Mainly working on
-                                subscription and ads for all major platforms like Mobile, Tablets, Web, and TV.</span>
-                        </div>
-
-
-                        <div class="single-xp flex flex-col items-start gap-1 justify-between">
-                            <div class="header flex flex-row-reverse items-center gap-2 flex-shrink-0">
-                                <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Dunzo</span>
-                                <span [style.backgroundColor]="mainTextColor"
-                                    class="line w-[1px] h-3 bg-[#6F7588]"></span>
-                                <span [style.color]="mainTextColor" class="Poppins-Medium flex-shrink-0 text-xs">Product
-                                    Designer</span>
-                            </div>
-
-                            <span class="Poppins-Regular text-[#9FA3AE] flex-shrink-0 text-xs">Jan 2020 - Sept
-                                2021</span>
-
-                            <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Currently
-                                working on a new Disney+Hotstar product line for a global audience. Mainly working on
-                                subscription and ads for all major platforms like Mobile, Tablets, Web, and TV.</span>
-                        </div>
-
-                    </div>
-                </div>
+        <div class="education-section flex items-start justify-between">
+            <div class="left w-[30%]">
+                <span [style.color]="mainTextColor" class="SG-Bold text-sm">Education</span>
             </div>
 
-            <div class="main-education-group flex flex-col gap-4">
-                <span [style.color]="mainTextColor" class="Poppins-Bold text-sm uppercase">Education</span>
-
-
-                <div class="flex flex-col gap-4">
-                    <div class="education-section flex flex-col items-start gap-4 justify-between">
-
-                        <div class="single-education flex flex-col items-start gap-1 justify-between">
-                            <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Bachelor of Technology in
-                                Electronics and Communication</span>
-
-                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Amrita University</span>
-
-                            <span class="Poppins-Regular text-[#9FA3AE] flex-shrink-0 text-xs">Jan 2016 - Jan 2020</span>
-                        </div>
-
+            <div class="right w-[70%] flex flex-col gap-4">
+                <div class="top-right flex items-start justify-between">
+                    <div class="header flex flex-col items-start flex-shrink-0">
+                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">School of Design</span>
+                        <span class="SG-Regular flex-shrink-0 text-xs">UX Design Bootcamp</span>
                     </div>
+
+                    <span class="SG-Regular flex-shrink-0 text-xs">Jan 2023 - Present</span>
+
+                </div>
+
+                <div class="bottom-right list-none relative flex flex-col items-start gap-1">
+                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Intensive, full-time program that provided hands-on training in user-centered design, prototyping, and visual design</li>
+                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Completed several design projects, including designing a mobile app for mental health, a website for a local non-profit, and an e-commerce platform for a start-up</li>
                 </div>
             </div>
-
 
         </div>
+
+        <div class="education-section flex items-start justify-between">
+            <div class="left w-[30%]">
+                <span [style.color]="mainTextColor" class="SG-Bold text-sm">Education</span>
+            </div>
+
+            <div class="right w-[70%] flex flex-col gap-4">
+                <div class="top-right flex items-start justify-between">
+                    <div class="header flex flex-col items-start flex-shrink-0">
+                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">XYZ Project</span>
+                        <span class="SG-Regular flex-shrink-0 text-xs">Freelance Designer</span>
+                    </div>
+
+                    <span class="SG-Regular flex-shrink-0 text-xs">Jan 2023 - Present</span>
+
+                </div>
+
+                <div class="bottom-right list-none relative flex flex-col items-start gap-1">
+                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Designed wireframes, prototypes, and visual designs for mobile and web-based products</li>
+                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Conducted usability testing and iterated on design solutions based on user feedback</li>
+                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Collaborated with developers  to ensure that designs were accurately implemented and met accessibility standards</li>
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="education-section flex items-start justify-between">
+            <div class="left w-[30%]">
+                <span [style.color]="mainTextColor" class="SG-Bold text-sm">Skills & Tools</span>
+            </div>
+
+            <div class="right w-[70%] flex flex-col gap-4">
+                <div class="top-right flex items-start justify-between">
+                    <div class="header flex flex-col items-start flex-wrap">
+                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">Skills</span>
+                        <span class="SG-Regular flex-shrink-0 text-xs">User Research, Interaction Design, Visual Design, Communication and Collaboration, User Testing, Adaptability, Continuous Learning</span>
+                    </div>
+
+                </div>
+
+                <div class="top-right flex items-start justify-between">
+                    <div class="header flex flex-col items-start flex-wrap">
+                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">Tools</span>
+                        <span class="SG-Regular flex-shrink-0 text-xs">Sketch, Figma, Figjam  , Adobe Creative Suite  , InVision, Axure, Marvel App, Balsamiq, Webflow, UserTesting</span>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
     </div>
 </section>
+
