--- a/src/assets/templates/template-one/template-one.component.scss
+++ b/src/assets/templates/template-one/template-one.component.scss
@@ -1,6 +1,6 @@
-// .main-container{
-//     box-shadow: 0px 6.4px 8.54px -2.13px rgba(16,24,40,0.08), 0px 2.13px 3.2px -1.07px rgba(16,24,40,0.03);
-// }
+.main-container{
+    box-shadow: 0px 6.4px 8.54px -2.13px rgba(16,24,40,0.08), 0px 2.13px 3.2px -1.07px rgba(16,24,40,0.03);
+}
 
 li::before {
     content: "\2022"; /* Unicode character for bullet point */
