--- a/src/app/components/preview-templates/template-three-preview/template-three-preview.component.html
+++ b/src/app/components/preview-templates/template-three-preview/template-three-preview.component.html
@@ -1,178 +1,141 @@
 <section class="main-container w-full h-full p-6 flex flex-col gap-8">
-    <div class="header flex items-end justify-between">
-
-        <div class="left flex items-center gap-2">
-            <div [style.backgroundColor]="mainTextColor" class="w-9 h-9 rounded-full">
-                
-            </div>
-
-            <div class="flex flex-col items-start">
-                <span [style.color]="mainTextColor" class="RC-Bold uppercase text-xl">Daniel Glover</span>
-                <span class="RM-Medium text-[#6F7588] subtxt uppercase text-sm">Frontend Developer</span>
-            </div>
+    <div class="header flex flex-col items-start justify-between gap-2">
+        <div class="left flex flex-col items-start">
+            <span [style.color]="mainTextColor" class="Poppins-SemiBold text-xl">Daniel Glover</span>
+            <span class="Poppins-SemiBold subtxt text-sm text-[#6F7588]">Frontend Developer</span>
         </div>
-        
 
-        <div class="right flex flex-col items-end">
-            <a href="#" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">danielglover.design</a>
-            <a href="#" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">iamglover0&commat;gmail.com</a>
-            <span class="RM-Regular subtxt text-[#646C86] text-[10px]">055 830 8631</span>
+        <div class="right flex flex-row gap-2 items-center">
+            <span class="Poppins-Regular text-[#9FA3AE] subtxt text-[10px]">055 830 8631</span>
+            <div class="dot w-1 h-1 bg-[#9FA3AE] rounded-full"></div>
+            <span class="Poppins-Regular text-[#9FA3AE] subtxt text-[10px]">iamglover0&commat;gmail.com</span>
+            <div class="dot w-1 h-1 bg-[#9FA3AE] rounded-full"></div>
+            <a href="#" class="Poppins-Regular text-[#9FA3AE] underline subtxt text-[10px]">www.danielglover.com</a>
+
         </div>
     </div>
 
-    <div [style.backgroundColor]="mainTextColor" class="line flex h-[0.5px] w-full p-[0.5px] opacity-50"></div>
+
+    <div class="main-body flex flex-row gap-6">
+
+        <div class="left-skills w-[30%] flex-col">
+
+            <div class="main-skills-group flex flex-col gap-6">
+                <span [style.color]="mainTextColor" class="Poppins-Bold text-sm uppercase">Skills & Tools</span>
 
 
-    <div class="main-body w-full flex flex-col gap-6">
+                <div class="flex flex-col gap-4">
+                    <div class="skills-section flex flex-col items-start gap-4 justify-between">
 
-        <div class="profile-section w-full flex flex-col items-start gap-1">
-            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm">Profile</span>
+                        <div class="single-skill flex flex-col items-start gap-1 justify-between">
+                            <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Skills</span>
 
-            <span class="text-[10px] RM-Medium text-black">As a dedicated frontend developer, I possess a strong passion for crafting compelling and seamlessly functional user experiences.</span>
-        </div>
+                            <div class="group flex flex-col items-start gap-1">
+                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Rapid
+                                    Prototyping</span>
+                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">User
+                                    Research</span>
+                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Interaction
+                                    Design</span>
+                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Visual
+                                    Design</span>
+                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">User
+                                    Testing</span>
+                            </div>
+                        </div>
 
-        <div class="skills-section w-full flex flex-row items-start gap-1">
-            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Skills</span>
+                        <div class="single-skill flex flex-col items-start gap-1 justify-between">
+                            <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Tools</span>
 
-            <div class="text-[10px] RM-Medium grid grid-cols-3 gap-x-1 gap-y-1 text-black w-[70%]">
-                <span class="">TypeScript</span>
-                <span class="">Angular</span>
-                <span class="">React.js</span>
-                <span class="">HTML5</span>
-                <span class="">CSS/SCSS</span>
-                <span class="">TailwindCSS</span>
-                <span class="">Node.JS</span>
-                <span class="">NextJS</span>
-                <span class="">TypeScript</span>
+                            <div class="group flex flex-col items-start gap-1">
+                                <span
+                                    class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Sketch</span>
+                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Figma</span>
+                                <span
+                                    class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">FigJam</span>
+                                <span
+                                    class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">InVision</span>
+                                <span
+                                    class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Webflow</span>
+                            </div>
+                        </div>
 
-
-            </div>
-        </div>
-
-
-        <div class="experience-section w-full flex flex-row items-start gap-1">
-            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Experience</span>
-
-            <div class="right w-[70%] flex flex-col gap-4">
-                <div class="top-right flex flex-col items-start justify-between">
-                    <div class="header flex flex-row-reverse items-center gap-1 flex-shrink-0">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Apple Inc.</span>
-                        <span [style.backgroundColor]="mainTextColor"
-                            class="line w-[1px] h-3 bg-[#6F7588]"></span>
-                        <span [style.color]="mainTextColor" class="RC-Medium flex-shrink-0 text-xs">Frontend Developer</span>
-                    </div>
-
-                    <div class="flex flex-row items-center gap-1 flex-shrink-0">
-                        <span class="Roboto-Medium text-[10px] text-[#9FA3AE]">San Francisco, CA</span>
-                        <span class="line w-[1px] h-3 bg-[#9FA3AE]"></span>
-                        <span class="Roboto-Medium flex-shrink-0 text-[10px] text-[#9FA3AE]">Internship</span>
-                        <span class="line w-[1px] h-3 bg-[#9FA3AE]"></span>
-                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Aug 2023</span>
-                    </div>
-
-                </div>
-
-                <div class="bottom-right text-[#6F7588] list-none relative flex flex-col items-start gap-1">
-                    <span class="Roboto-Regular text-[10px]">During this time, I gained;</span>
-                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Conducted user research and analyzed data to identify design opportunities and inform design decisions</li>
-                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Collaborated with cross-functional teams to create wireframes, prototypes, and high-fidelity mockups</li>
-                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Facilitated design reviews and user testing sessions to gather feedback and improve design solutions</li>
-                </div>
-            </div>
-        </div>
-
-        <div class="education-section w-full flex flex-row items-start gap-1">
-            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
-
-            <div class="flex flex-col w-[70%] gap-6">
-                <div class="right w-full flex flex-col gap-4">
-                    <div class="top-right flex flex-col items-start justify-between">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
-    
-                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
-    
-                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
-    
-                    </div>
-                </div>
-    
-                <div class="right w-full flex flex-col gap-4">
-                    <div class="top-right flex flex-col items-start justify-between">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
-    
-                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
-    
-                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
-    
                     </div>
                 </div>
             </div>
 
-            
         </div>
 
-        <div class="education-section w-full flex flex-row items-start gap-1">
-            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
+        <div class="right-experiences w-[70%] flex gap-6 flex-col">
 
-            <div class="flex flex-col w-[70%] gap-6">
-                <div class="right w-full flex flex-col gap-4">
-                    <div class="top-right flex flex-col items-start justify-between">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
-    
-                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
-    
-                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
-    
-                    </div>
-                </div>
-    
-                <div class="right w-full flex flex-col gap-4">
-                    <div class="top-right flex flex-col items-start justify-between">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
-    
-                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
-    
-                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
-    
+            <div class="main-experience-group flex flex-col gap-4">
+                <span [style.color]="mainTextColor" class="Poppins-Bold text-sm uppercase">Experiences</span>
+
+
+                <div class="flex flex-col gap-4">
+                    <div class="experience-section flex flex-col items-start gap-4 justify-between">
+
+                        <div class="single-xp flex flex-col items-start gap-1 justify-between">
+                            <div class="header flex flex-row-reverse items-center gap-2 flex-shrink-0">
+                                <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Disney+
+                                    Hotstar</span>
+                                <span [style.backgroundColor]="mainTextColor"
+                                    class="line w-[1px] h-3 bg-[#6F7588]"></span>
+                                <span [style.color]="mainTextColor" class="Poppins-Medium flex-shrink-0 text-xs">Product
+                                    Designer</span>
+                            </div>
+
+                            <span class="Poppins-Regular text-[#9FA3AE] flex-shrink-0 text-xs">Sept 2021 -
+                                Present</span>
+
+                            <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Currently
+                                working on a new Disney+Hotstar product line for a global audience. Mainly working on
+                                subscription and ads for all major platforms like Mobile, Tablets, Web, and TV.</span>
+                        </div>
+
+
+                        <div class="single-xp flex flex-col items-start gap-1 justify-between">
+                            <div class="header flex flex-row-reverse items-center gap-2 flex-shrink-0">
+                                <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Dunzo</span>
+                                <span [style.backgroundColor]="mainTextColor"
+                                    class="line w-[1px] h-3 bg-[#6F7588]"></span>
+                                <span [style.color]="mainTextColor" class="Poppins-Medium flex-shrink-0 text-xs">Product
+                                    Designer</span>
+                            </div>
+
+                            <span class="Poppins-Regular text-[#9FA3AE] flex-shrink-0 text-xs">Jan 2020 - Sept
+                                2021</span>
+
+                            <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Currently
+                                working on a new Disney+Hotstar product line for a global audience. Mainly working on
+                                subscription and ads for all major platforms like Mobile, Tablets, Web, and TV.</span>
+                        </div>
+
                     </div>
                 </div>
             </div>
 
-            
-        </div>
+            <div class="main-education-group flex flex-col gap-4">
+                <span [style.color]="mainTextColor" class="Poppins-Bold text-sm uppercase">Education</span>
 
-        <div class="education-section w-full flex flex-row items-start gap-1">
-            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
 
-            <div class="flex flex-col w-[70%] gap-6">
-                <div class="right w-full flex flex-col gap-4">
-                    <div class="top-right flex flex-col items-start justify-between">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
-    
-                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
-    
-                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
-    
-                    </div>
-                </div>
-    
-                <div class="right w-full flex flex-col gap-4">
-                    <div class="top-right flex flex-col items-start justify-between">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
-    
-                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
-    
-                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
-    
+                <div class="flex flex-col gap-4">
+                    <div class="education-section flex flex-col items-start gap-4 justify-between">
+
+                        <div class="single-education flex flex-col items-start gap-1 justify-between">
+                            <span [style.color]="mainTextColor" class="Poppins-Medium text-sm">Bachelor of Technology in
+                                Electronics and Communication</span>
+
+                                <span class="Poppins-Medium text-[#6F7588] flex-shrink-0 text-xs text-left">Amrita University</span>
+
+                            <span class="Poppins-Regular text-[#9FA3AE] flex-shrink-0 text-xs">Jan 2016 - Jan 2020</span>
+                        </div>
+
                     </div>
                 </div>
             </div>
 
-            
+
         </div>
-
-
-
     </div>
 </section>
-
