implemented download function to download template to pdf

--- a/src/assets/templates/template-one/template-one.component.html
+++ b/src/assets/templates/template-one/template-one.component.html
@@ -24,7 +24,7 @@
                 <a href="{{formData.github}}" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">github.com</a>
             }
 
-            <a href="{{formData.email}}" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">{{formData.email}}</a>
+            <a href="mailto:{{formData.email}}" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">{{formData.email}}</a>
             <span class="RM-Regular subtxt text-[#646C86] text-[10px]">{{formData.phone}}</span>
         </div>
     </div>
